# work-trials

./: .env  .gitignore  README.md
.github/actions/: deploy_assets.yml
.github/actions/deploy_assets/: action.yml
.github/workflows/: cd.yml  ci.yml  fullstack_workflow.yml
JD-FullStack-Engineer/: README.md  docker-componse.yml
JD-FullStack-Engineer/backend/: Dockerfile  Readme.md  app.js  docker-compose.yml  package-lock.json  package.json  schema.sql  swagger.json
JD-FullStack-Engineer/backend/__tests__/: eventController.test.js
JD-FullStack-Engineer/client/: Dockerfile  package-lock.json  package.json
JD-FullStack-Engineer/dataGen/: generateData.js  generatePeople.js  package-lock.json  package.json
JD-FullStack-Engineer/database/: Dockerfile  schema.sql
JD-FullStack-Engineer/solution/: .gitignore  README.md  data_typing.py  demo_only_monitor.py  integrations.py  output_data.py  process_data.py  utils.py
JD-Lead Backend-Engineer-(Data)/: README.md  Task3.md  pyproject.toml
JD-Lead Backend-Engineer-(Data)/dataGen/: README.md  generateData.js
JD-Lead Backend-Engineer-(Data)/joynBEE/: Task1.md  Task2.md  Task4.md  analysis_primitives.py  basic.py  demo.py  langtools.py  platforms.py  secrets.example.json  textanalysis.py  utilities.py
JD-Lead Backend-Engineer-(Data)/joynBEE/tests/: test_corpus.py  test_data.py  test_datum.py  test_lang.py  test_platforms.py  test_primitives.py
JD-Lead Backend-Engineer-(Data)/plumblebee/: analysis_primitives.py  demo.py
JD-Lead Backend-Engineer-(Data)/plumblebee/tests/: test_data.py
secrets/: id_rsa
(+48 files in other folders)
