[tool.poetry]
name = "joynBEE"
version = "0.1.0"
description = "Take-home exercise for backend engineering at Joyn"
authors = ["Rebecca Lovering <lovering810@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "*"
psycopg2 = "*"
requests = "*"
langchain = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-cohere = "*"
faiss-cpu = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"